@@ -130,6 +130,7 @@ ORDINARY_PROGS=	\
 	space \
 	special_char \
 	split_c_files \
+	stable_sort \
 	string_alignment \
 	string_alignment_bug \
 	string_loop \
