@@ -1,0 +1,1 @@
+list__sort/3 appears stable
